# foot_medina

./: .gitignore  README.md  app.py  layouts.py  matches_scraper.py  preproc_matches.py  pyproject.toml  rankings_scraper.py
assets/: header.css  typography.css
tests/: test_foot_medina.py
