[tool.poetry]
name = "foot_medina"
version = "0.1.0"
description = ""
authors = ["Alex Kogi <Alexandrekogi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
black = "^21.12b0"
ipykernel = "^6.7.0"
selenium = "^4.1.0"
webdriver-manager = "^3.5.2"
pandas = "^1.3.5"
dash = "^2.0.0"
openpyxl = "^3.0.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
